--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^2.6.14",
+    "p5": "^1.5.0",
+    "save": "^2.9.0",
+    "vue": "^2.7.14",
+    "vue-p5": "^0.8.4",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0"
   },
