--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "firebase": "^8.8.0",
     "p5": "^1.5.0",
     "save": "^2.9.0",
     "vue": "^2.7.14",
